added dimension selector prompt and added shadcn usage and tooltip support for all tools

--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.445.0",
+    "radix-vue": "^1.9.6",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
     "vue": "^3.4.29"
   },
   "devDependencies": {
